--- a/view/partial/tasks.html
+++ b/view/partial/tasks.html
@@ -20,15 +20,24 @@ along with Pa11y Dashboard.  If not, see <http://www.gnu.org/licenses/>.
 		<button class="btn view-btn btn-list"><i class="glyphicon glyphicon-align-justify "></i> List</button>
 	
 	</div>
-	<div class="panel-group" id="accordion" role="tablist" aria-multiselectable="true">
-		<div class="panel panel-default">
-			<h4 class="panel-title">
-				<a role="button" data-toggle="collapse" data-parent="#accordion" href="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
-				  Help Library
-				</a>
+	<div class="typeReveal">
+		<button class="btn btn-primary" type="button" data-toggle="collapse" data-target="#collapse1" aria-expanded="false" aria-controls="collapse1">
+			Help-Library
+		</button>
+		<button class="btn btn-primary" type="button" data-toggle="collapse" data-target="#collapse2" aria-expanded="false" aria-controls="collapse2">
+			Support
+		</button>
+		<button class="btn btn-primary" type="button" data-toggle="collapse" data-target="#collapse3" aria-expanded="false" aria-controls="collapse3">
+			OBS
+		</button>
+	</div>
+	<div>
+		<div id="collapse1">
+			<h4>
+				Help Library
 			</h4>
-			<div  id="collapseOne" role="tabpanel" aria-labelledby="headingOne" class="panel-collapse collapse in">
-				<ul class="panel-body list-unstyled clearfix crunch-bottom" id="grid-container">
+			<div class="resultsBody">
+				<ul class="list-unstyled clearfix crunch-bottom" id="grid-container1">
 			
 					{{#unless readonly}}
 						<li class="col-md-4 col-sm-6 task-card add-task">
@@ -80,14 +89,12 @@ along with Pa11y Dashboard.  If not, see <http://www.gnu.org/licenses/>.
 				</ul>
 			</div>
 		</div>
-		<div class="panel panel-default">
-			<h4 class="panel-title">
-				<a role="button" data-toggle="collapse" data-parent="#accordion" href="#collapseTwo" aria-expanded="true" aria-controls="collapseTwo">
-				  Support Pages
-				</a>
+		<div id="collapse2">
+			<h4>
+				Support Pages
 			</h4>
-			<div  id="collapseTwo" role="tabpanel" aria-labelledby="headingTwo" class="panel-collapse collapse in">
-				<ul class="panel-body list-unstyled clearfix crunch-bottom" id="grid-container">
+			<div class="resultsBody">
+				<ul class="list-unstyled clearfix crunch-bottom" id="grid-container2">
 			
 					{{#unless readonly}}
 						<li class="col-md-4 col-sm-6 task-card add-task">
@@ -139,14 +146,12 @@ along with Pa11y Dashboard.  If not, see <http://www.gnu.org/licenses/>.
 				</ul>
 			</div>
 		</div>
-		<div class="panel panel-default">
-			<h4 class="panel-title">
-				<a role="button" data-toggle="collapse" data-parent="#accordion" href="#collapseThree" aria-expanded="true" aria-controls="collapseThree">
-				  OBS Pages
-				</a>
+		<div id="collapse3">
+			<h4>
+				OBS Pages
 			</h4>
-			<div  id="collapseThree" role="tabpanel" aria-labelledby="headingThree" class="panel-collapse collapse in">
-				<ul class="panel-body list-unstyled clearfix crunch-bottom" id="grid-container">
+			<div class="resultsBody">
+				<ul class="list-unstyled clearfix crunch-bottom" id="grid-container3">
 			
 					{{#unless readonly}}
 						<li class="col-md-4 col-sm-6 task-card add-task">
