made change to hide

--- a/view/partial/tasks.html
+++ b/view/partial/tasks.html
@@ -32,7 +32,7 @@ along with Pa11y Dashboard.  If not, see <http://www.gnu.org/licenses/>.
 		</button>
 	</div>
 	<div>
-		<div id="collapse1">
+		<div id="collapse1" class="collapse">
 			<h4>
 				Help Library
 			</h4>
@@ -89,7 +89,7 @@ along with Pa11y Dashboard.  If not, see <http://www.gnu.org/licenses/>.
 				</ul>
 			</div>
 		</div>
-		<div id="collapse2">
+		<div id="collapse2" class="collapse">
 			<h4>
 				Support Pages
 			</h4>
@@ -146,7 +146,7 @@ along with Pa11y Dashboard.  If not, see <http://www.gnu.org/licenses/>.
 				</ul>
 			</div>
 		</div>
-		<div id="collapse3">
+		<div id="collapse3" class="collapse">
 			<h4>
 				OBS Pages
 			</h4>
