--- a/view/partial/tasks.html
+++ b/view/partial/tasks.html
@@ -20,19 +20,19 @@ along with Pa11y Dashboard.  If not, see <http://www.gnu.org/licenses/>.
 		<button class="btn view-btn btn-list"><i class="glyphicon glyphicon-align-justify "></i> List</button>
 	
 	</div>
-	<div class="typeReveal">
-		<button class="btn btn-primary" type="button" data-toggle="collapse" data-target="#collapse1" aria-expanded="false" aria-controls="collapse1">
-			Help-Library
-		</button>
-		<button class="btn btn-primary" type="button" data-toggle="collapse" data-target="#collapse2" aria-expanded="false" aria-controls="collapse2">
-			Support
-		</button>
-		<button class="btn btn-primary" type="button" data-toggle="collapse" data-target="#collapse3" aria-expanded="false" aria-controls="collapse3">
-			OBS
-		</button>
-	</div>
-	<div>
-		<div id="collapse1" class="collapse">
+	<ul class="nav nav-tabs" id="myTab" role="tablist">
+		<li class="nav-item" role="none presentation">
+		  <a role="tab" aria-selected="true" aria-controls="help-library-tab-content"  class="nav-link active" id="help-library-tab" data-toggle="tab" href="#help-library-tab-content" >Help-Library</a>
+		</li>
+		<li class="nav-item" role="none presentation">
+		  <a role="tab" aria-controls="support-tab-content" aria-selected="false" class="nav-link" id="support-tab" data-toggle="tab" href="#support-tab-content" >Support</a>
+		</li>
+		<li class="nav-item" role="none presentation">
+		  <a role="tab" aria-controls="obs-tab-content" aria-selected="false" class="nav-link" id="obs-tab" data-toggle="tab" href="#obs-tab-content" >OBS</a>
+		</li>
+	</ul>
+	<div class="tab-content" id="myTabContent">
+		<div class="tab-pane fade show active" id="help-library-tab-content" role="tabpanel" aria-labelledby="help-library-tab">
 			<h4>
 				Help Library
 			</h4>
@@ -89,7 +89,7 @@ along with Pa11y Dashboard.  If not, see <http://www.gnu.org/licenses/>.
 				</ul>
 			</div>
 		</div>
-		<div id="collapse2" class="collapse">
+		<div class="tab-pane fade" id="support-tab-content" role="tabpanel" aria-labelledby="support-tab">
 			<h4>
 				Support Pages
 			</h4>
@@ -146,7 +146,7 @@ along with Pa11y Dashboard.  If not, see <http://www.gnu.org/licenses/>.
 				</ul>
 			</div>
 		</div>
-		<div id="collapse3" class="collapse">
+		<div class="tab-pane fade" id="obs-tab-content" role="tabpanel" aria-labelledby="obs-tab">
 			<h4>
 				OBS Pages
 			</h4>
