adjusted logic of grid to target tab content

--- a/view/partial/tasks.html
+++ b/view/partial/tasks.html
@@ -32,7 +32,7 @@ along with Pa11y Dashboard.  If not, see <http://www.gnu.org/licenses/>.
 		</li>
 	</ul>
 	<div class="tab-content" id="myTabContent">
-		<div class="tab-pane fade show active" id="help-library-tab-content" role="tabpanel" aria-labelledby="help-library-tab">
+		<div class="tab-pane fade active" id="help-library-tab-content" role="tabpanel" aria-labelledby="help-library-tab">
 			<h4>
 				Help Library
 			</h4>
